# sense-stack

./: .gitignore  LICENSE  README.md  pyproject.toml
sense_stack/: __init__.py  corpus.py  disambiguate.py  senses.py  train.py
sense_stack/data/: corpus.json
sense_stack/models/: .gitkeep  classifier_bank_bert-base-uncased.pt  classifier_light_bert-base-uncased.pt  classifier_organ_bert-base-uncased.pt  classifier_plant_bert-base-uncased.pt  classifier_star_bert-base-uncased.pt
