[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sense-stack"
version = "0.1.0"
description = "Word sense disambiguation as a separable capability"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Peter Balogh", email = "palexanderbalogh@gmail.com"}]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
generate = ["anthropic"]  # for generating new sense-tagged sentences

[project.urls]
Homepage = "https://github.com/pbalogh/sense-stack"
Paper = "https://arxiv.org/abs/TODO"
Issues = "https://github.com/pbalogh/sense-stack/issues"

[tool.setuptools.packages.find]
include = ["sense_stack*"]
